# agentic-team-plugin

./: .gitignore  README.md  REVIEW.md  ROADMAP.md
agents/: analyst.md  builder.md  orchestrator.md  qa.md  release-manager.md  security.md  spec.md  triage.md
config/: framework.yaml.example
deploy/: manifest.yaml  sync-framework.sh
docs/: ownership-matrix.md
policies/: automation-boundary.md  deployment.md  git-safety.md  human-approval.md  named-agent-routing.md  named-agent-specialists.md  project-activation.md  project-agent-namespacing.md  repo-management.md  session-rollover.md  spec-process.md  wiki.md
repo-templates/: README.md  SPEC.md
schemas/: action-event.schema.json  action-types.json  callback.md  decision-record.md  handoff.schema.json  reason-codes.json  specialist-template.md  workflow.json
scripts/: agent-session-id.py  archetype-session-target.py  bootstrap-project-repo.sh  check-framework-version.sh  check-release-issues.sh  check-task-ledger-overdue.py  clone-agent-project-repo.sh  create-agent-issue.sh  create-agent-pr.sh  create-project-scoped-agents.sh  cut-release-tag.sh  deploy-agent-workspace-bootstrap.py  deploy-named-agents.py  deploy-project-agent-workspaces.py  direct-spawn-archetype.sh  dispatch-named-agent.sh  generate-release-notes.sh  generate-runtime-bundles.py  get-runtime-bundle-path.sh  (+49 more)
server/mcp_ledger/: Dockerfile  README.md  pyproject.toml
server/mcp_ledger/mcp_ledger/: config.py  database.py  schema.sql  server.py
server/mcp_ledger/tests/: conftest.py  test_health.py  test_projects.py  test_tasks.py
(+143 files in other folders)
