[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ledger"
version = "0.1.0"
description = "Task Ledger MCP server with PostgreSQL backing store"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.4.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
mcp-ledger = "mcp_ledger.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_ledger"]
